<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a9726446.a4_2p.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/strMenuInstruction"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="193dp"
        android:layout_height="224dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/ibtnCroissant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/strCroissant"
                app:srcCompat="@drawable/320px-Beckmann's_Old_World_Bakery_Farmers'_Market_Chocolate_Croissant" />

            <ImageButton
                android:id="@+id/ibtnAnzac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/strAnzac"
                app:srcCompat="@drawable/320px-ANZAC_biscuits" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/ibtnPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/strPizza"
                app:srcCompat="@drawable/320px-Pizza_with_pineapple" />

            <ImageButton
                android:id="@+id/ibtnBolognese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/strBolognese"
                app:srcCompat="@drawable/320px-Lutong_Bahay_-_Bolognese_Spaghetti" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
